<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.bookshare.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_myshelf"
        android:name="com.example.bookshare.ui.myshelf.MyshelfFragment"
        android:label="@string/title_myshelf"
        tools:layout="@layout/fragment_myshelf" />

    <fragment
        android:id="@+id/navigation_map"
        android:name="com.example.bookshare.ui.map.MapFragment"
        android:label="@string/title_users"
        tools:layout="@layout/fragment_map" />

    <fragment
        android:id="@+id/navigation_messages"
        android:name="com.example.bookshare.ui.messages.MessagesFragment"
        android:label="@string/title_messages"
        tools:layout="@layout/fragment_messages" />
</navigation>